--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,6 +3,8 @@ body{
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
+    margin: 0px;
+    padding: 0px;
 }
 
 #container{
