--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,6 +5,7 @@ body{
     font-size: 16px;
     margin: 0px;
     padding: 0px;
+    background: #1e1f24;
 }
 
 #container #cabecera{
@@ -14,6 +15,11 @@ body{
     font-weight: bold;
     margin: 0;
     padding: 0.5em;
+}
+
+#container #cabecera #logo{
+    width: 20px;
+    vertical-align: middle;
 }
  
 #container #cabecera #tagline{
@@ -35,5 +41,6 @@ body{
 }
 
 #post{
+    background: white;
     padding: 1em;
 }
